Fixes #239 - Fix release workflow (#240)